--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,15 +7,14 @@ header {
     position: fixed;
     background-color: white;
     width: 100vw;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%) ;
 }
 
 #aside-left {
-    background-color: green;
     grid-area: aside-left;
 }
 
 #aside-right {
-    background-color: brown;
     grid-area: aside-right;
 }
 
@@ -27,9 +26,11 @@ header {
 .container-home {
     display: grid;
     height: 100vh;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 350px 650px 300px;
     grid-template-areas: "aside-left content aside-right";
+    padding-top: 65px;
 }
+
 
 /************************** MENU ***************************/
 
@@ -152,11 +153,116 @@ header #header-right .header-icon .notification {
     z-index: 1;
 }
 
+/************************** ASIDE LEFT **********************/
+
+#aside-left {
+    padding: 20px;
+}
+
+#aside-left .navigation-items {
+    position: fixed;
+    height: 95vh;
+    overflow: hidden;
+    left: 0;
+    padding-right: 20px;
+}
+
+#aside-left .navigation-item {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    cursor: pointer;
+}
+
+#aside-left .navigation-item:nth-child(1) img {
+    border-radius: 50px;
+}
+
+#aside-left .navigation-item .navigation-description {
+    font-weight: bold;
+    padding-left: 10px;
+}
+
+#aside-left .navigation-item:hover {
+    background-color: #efefef;
+    border-radius: 5px;
+}
+
+#aside-left a {
+    text-decoration: none;
+    color: black;
+}
+
+/************************** ASIDE RIGHT **********************/
+
+#aside-right {
+    padding-bottom: 20px;
+}
+
+#aside-right .users-items {
+    position: fixed;
+    height: 95vh;
+    overflow: scroll;
+    right: 0;
+    padding-right: 20px;
+}
+
+#aside-right .users-item {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    padding: 5px;
+    position: relative;
+}
+
+#aside-right .users-item img {
+    width: 50px;
+    border-radius: 50px;
+}
+
+#aside-right .users-item .username {
+    font-weight: bold;
+    padding-left: 10px;
+}
+
+#aside-right .users-item:hover {
+    background-color: #efefef;
+    border-radius: 5px;
+}
+
+#aside-right .users-item .status {
+    width: 9px;
+    height: 9px;
+    border-radius: 50px;
+    position: absolute;
+    bottom:  20px;
+    left: 48px;
+    border: 1px solid white;
+}
+
+.online {
+    background-color: green;
+}
+
+.offline {
+    background-color: gray;
+}
+/************************** CAROUSSEL **********************/
+.stories-item {
+    width: 220px;
+}
+
+.stories-item img {
+    width: 200px;
+    height: 350px;
+    border-radius: 10px;
+}
+
 /************************** RESPONSIVE **********************/
 
 @media screen and (min-width: 900px) and (max-width: 1300px) {
     .container-home {
-        grid-template-columns: 3fr 1fr;
+        grid-template-columns: 600px 300px;
         grid-template-areas: "content aside-right";
     }
 
@@ -195,7 +301,7 @@ header #header-right .header-icon .notification {
 
 @media screen and (min-width: 600px) and (max-width: 900px) {
     .container-home {
-        grid-template-columns: 1fr;
+        grid-template-columns: 90%;
         grid-template-areas: "content";
     }
 
@@ -247,7 +353,7 @@ header #header-right .header-icon .notification {
 
 @media screen and (max-width: 600px) {
     .container-home {
-        grid-template-columns: 1fr;
+        grid-template-columns: 95%;
         grid-template-areas: "content";
     }
 
