--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,12 @@
         font-weight: bold;
         cursor: pointer;
     }
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .box {
+        box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+    }
