--- a/assets/css/icon.css
+++ b/assets/css/icon.css
@@ -13,7 +13,7 @@
     width: 24px;
     background-image: url("/assets/images/icon/all-2.png");
     background-position: 0px -159px;
-    background-size: 49px 530px;
+    background-size: 49px 560px;
     background-repeat: no-repeat;
     display: inline-block;
 }
@@ -36,7 +36,7 @@
     width: 24px;
     background-image: url("/assets/images/icon/all-2.png");
     background-position: 0px -182px;
-    background-size: 49px 530px;
+    background-size: 49px 560px;
     background-repeat: no-repeat;
     display: inline-block;
 }
@@ -46,7 +46,7 @@
     width: 24px;
     background-image: url("/assets/images/icon/all-2.png");
     background-position: 0px -307px;
-    background-size: 49px 530px;
+    background-size: 49px 560px;
     background-repeat: no-repeat;
     display: inline-block;
 }
@@ -56,7 +56,7 @@
     width: 24px;
     background-image: url("/assets/images/icon/all-2.png");
     background-position: 0px -257px;
-    background-size: 49px 530px;
+    background-size: 49px 560px;
     background-repeat: no-repeat;
     display: inline-block;
 }
@@ -66,7 +66,7 @@
     width: 24px;
     background-image: url("/assets/images/icon/all-2.png");
     background-position: 0px -232px;
-    background-size: 49px 530px;
+    background-size: 49px 560px;
     background-repeat: no-repeat;
     display: inline-block;
 }
@@ -116,7 +116,7 @@
     width: 24px;
     background-image: url("/assets/images/icon/all-2.png");
     background-position: 0px -307px;
-    background-size: 49px 530px;
+    background-size: 49px 560px;
     background-repeat: no-repeat;
     display: inline-block;
 }
@@ -126,7 +126,7 @@
     width: 24px;
     background-image: url(/assets/images/icon/all-2.png);
     background-position: 0px -232px;
-    background-size: 49px 530px;
+    background-size: 49px 560px;
     background-repeat: no-repeat;
     display: inline-block;
 }
@@ -209,4 +209,8 @@
     height: 20px;
     background-repeat: no-repeat;
     display: inline-block;
+}
+
+.post-message-icon {
+    
 }
