--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,7 @@
     .box {
         box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
     }
+
+    .profile-picture img {
+        border-radius: 50px;
+    }
