--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,19 @@
         box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
     }
 
+    .profile-picture {
+        padding: 10px;
+    }
     .profile-picture img {
+        width: 50px;
         border-radius: 50px;
+    }
+
+    .username {
+        font-weight: bold;
+    }
+
+    .divider {
+        border: 0.1px solid #ccc;
+        margin: 5px 0;
     }
